[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.8", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false }
cursive = "0.18"
crossterm = "0.23"
