[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.1", features = [ "v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.19"


[dependencies.sea-orm-migration]
version = "^0.8.0"
features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite"
]